tests/snapshots/files__antiunify_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Add (AU (Var "x") (Var "y")) (Num 3))
AU: 21
Add: 24
Num: 3
Var: 2
