tests/snapshots/files__antiunify_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (Add (Num 1) (Num 2)))
(let t1 (Add (Var "x") t0))
(let t2 (Add (Num 3) (Var "y")))
(let t3 (AU t1 t2))
(let t4 (AU (Var "x") (Var "y")))
(let prop0 (= t3 (Add (Num 3) t4)))
(let prf0 (Fiat (= t3 t3)))
(let t5 (AU t0 t0))
(let t6 (Add t5 t4))
(let t7 (Add t0 (Var "x")))
(let t8 (Add t0 (Var "y")))
(let prf1
  (Rule
                    (= (Num 3) t0)
                    (name "(rewrite (Add (Num x) (Num y)) (Num (+ x y)))")
                    (premises (Fiat (= t0 t0)))
                    (substitution (@rewrite_var__1 t0) (x 1) (y 2))))
(let t9
  (premises
              (Congr
                (= t3 (AU t7 t8))
                (Congr
                  (= t3 (AU t7 t2))
                  prf0
                  (Sym
                    (= t1 t7)
                    (Rule
                      (= t7 t1)
                      (name "(rewrite (Add x y) (Add y x))")
                      (premises (Fiat (= t1 t1)))
                      (substitution (y t0) (x (Var "x")) (@rewrite_var__ t1))))
                  0)
                (Congr (= t2 t8) (Fiat (= t2 t2)) prf1 0)
                1)))
(let t10
  (substitution
              (@rewrite_var__3 t3)
              (a t0)
              (d (Var "y"))
              (b (Var "x"))
              (c t0)))
(Trans
  prop0
  prf0
  (Congr
    prop0
    (Congr
      (= t3 (Add t0 t4))
      (Sym
        (= t3 t6)
        (Rule
          (= t6 t3)
          (name "(rewrite (AU (Add a b) (Add c d)) (Add (AU a c) (AU b d)))")
          t9
          t10))
      (Rule
        (= t5 t0)
        (name "(rewrite (AU x x) x)")
        (premises
          (Rule
            (= t5 t5)
            (name "(rewrite (AU (Add a b) (Add c d)) (Add (AU a c) (AU b d)))")
            t9
            t10))
        (substitution (@rewrite_var__2 t5) (x t0)))
      0)
    (Sym (= t0 (Num 3)) prf1)
    0))
(Add (Num 3) (AU (Var "x") (Var "y")))
AU: 21
Add: 24
Num: 3
Var: 2
