tests/snapshots/files__antiunify_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Add (Num 3) (AU (Var "x") (Var "y")))
AU: 42
AU: 21
Add: 52
Add: 24
Num: 3
Num: 3
Var: 2
Var: 2
