tests/snapshots/files__antiunify_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Add (Num 3) (AU (Var "x") (Var "y")))
AU: 21
Add: 24
Num: 3
Var: 2
