tests/snapshots/files__bdd.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  b2-0:
    op: b2
    children: []
    eclass: "21"
    cost: 9223372036854776000
  b123-0:
    op: b123
    children: []
    eclass: "6"
    cost: 9223372036854776000
  b11-0:
    op: b11
    children: []
    eclass: "12"
    cost: 9223372036854776000
  or-3713696389113654829:
    op: or
    children:
      - b2-0
      - b11-0
    eclass: "23"
    cost: 1
  or-10384174419947986705:
    op: or
    children:
      - b1-0
      - or-3713696389113654829
    eclass: "24"
    cost: 1
  b0-0:
    op: b0
    children: []
    eclass: "2"
    cost: 9223372036854776000
  or121-0:
    op: or121
    children: []
    eclass: "24"
    cost: 9223372036854776000
  True-0:
    op: "True"
    children: []
    eclass: "15"
    cost: 9223372036854776000
  False-0:
    op: "False"
    children: []
    eclass: "19"
    cost: 9223372036854776000
  b12-0:
    op: b12
    children: []
    eclass: "18"
    cost: 9223372036854776000
  b1-0:
    op: b1
    children: []
    eclass: "12"
    cost: 9223372036854776000
root_eclasses: []
class_data:
  "21":
    type: BDD
  "6":
    type: BDD
  "12":
    type: BDD
  "23":
    type: BDD
  "24":
    type: BDD
  "2":
    type: BDD
  "15":
    type: BDD
  "19":
    type: BDD
  "18":
    type: BDD

