tests/snapshots/files__bind_prim_result_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Rule
  (= (Strings "found" "hello world") (Strings "found" "hello world"))
  (name "r1")
  (premises
    (Fiat (= (Strings "hello" "world") (Strings "hello" "world")))
    (Fiat (= "hello world" "hello world")))
  (substitution (a "hello") (res "hello world") (b "world")))
