tests/snapshots/files__bind_prim_result_proofs.snap
---
source: tests/files.rs
expression: snapshot
---






(let t (= (Strings "found" "hello world") (Strings "found" "hello world")))
(let t1 (= (Strings "hello" "world") (Strings "hello" "world")))
(let t2 (Fiat (= "hello world" "hello world")))
(Congr
  t
  (Congr
    t
    (Rule
      t
      (name "r1")
      (premises
        (Congr
          t1
          (Congr t1 (Fiat t1) (Fiat (= "hello" "hello")) 0)
          (Fiat (= "world" "world"))
          1)
        (Trans
          (= "hello world" "hello world")
          (Sym (= "hello world" "hello world") t2)
          t2))
      (substitution (a "hello") (res "hello world") (b "world")))
    (Fiat (= "found" "found"))
    0)
  t2
  1)
